Bug 476802 - "Upgrade to [new distro version]" button text is not strictly speaking accurate
Summary: "Upgrade to [new distro version]" button text is not strictly speaking accurate
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (offline) (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2023-11-10 18:55 UTC by Nate Graham
Modified: 2023-11-17 14:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-11-10 18:55:33 UTC
Plasma 6 Wayland from git master on top of Fedora 38.

When a major distro upgrade is available and this button becomes visible at the top of the window, clicking on it does not in fact upgrade to the new distro version. It *begins* the process of upgrading to the distro by taking you to the Updates page whereupon you can see the new packages available and *then* do the upgrade.

Suggested options for how to improve this:

1. Easy partial solution: Change the button text to "Start Upgrade…"
2. Harder more complete solution: make the button actually start the upgrade process instead of just taking you to the Updates page and then making you click on "Update" again
Comment 1 Justin Zobel 2023-11-10 21:59:55 UTC
I think option 1 is fine. Having a full distro upgrade just be one button away could be considered a bit risky.
Comment 2 Alessandro Astone 2023-11-10 22:33:52 UTC
To me "Start Upgrade..." still feels like an immediate action. Also you lose the Name - Version information, but i suppose that could become part of the banner text instead

(Currently the button says Upgrade to Fedora Linux 39)
Comment 3 Justin Zobel 2023-11-10 23:27:27 UTC
What about Begin Upgrade indicating that this is only the beginning of 
the upgrade and it's a multi-step process?

On 11/11/23 09:03, Alessandro Astone wrote:
> https://bugs.kde.org/show_bug.cgi?id=476802
>
> --- Comment #2 from Alessandro Astone <ales.astone@gmail.com> ---
> To me "Start Upgrade..." still feels like an immediate action. Also you lose
> the Name - Version information, but i suppose that could become part of the
> banner text instead
>
> (Currently the button says Upgrade to Fedora Linux 39)
>
Comment 4 Nate Graham 2023-11-10 23:35:20 UTC
I think moving the name of the release you're upgrading to in the text makes sense, as it is a very long button right now! If we do that, then either "Begin Upgrade…" or "Start Upgrade…" would be good, I think. And note the ellipsis in these proposed strings; that's also to important to let the user know that it starts a multi-step action that demands further interactivity, rather than doing something immediately.
Comment 5 Nate Graham 2023-11-11 00:33:41 UTC
Proposed changes: https://invent.kde.org/plasma/discover/-/merge_requests/689
Comment 6 Nate Graham 2023-11-17 14:42:29 UTC
Git commit 00967dae94ace9b7d57ea6dc4ff2f689871d9d19 by Nate Graham.
Committed on 17/11/2023 at 15:41.
Pushed by ngraham into branch 'master'.

Refine presentation of "major upgrade available" message

- Put the distro name in the text so the button doesn't have to be so long
- For the PackageKit backend, change the button text to "Begin Upgrade…"
  So it's clear that this is just the first step and that further
  interactivity will be needed. For the RPM-OSTree backend, just tweak
  the existing wording to not be redundant.
- Give the button an appropriate icon
- Change the icon in the message banner itself to something more
  generic and appropriate (this is a generic update mechanism so it
  shouldn't be using an icon specific to RPM packages, since in
  principle this update notification could apply to an upgrade for
  any other kind of package too).
- While we're touching strings, give them some translation context
FIXED-IN: 6.0

M  +12   -10   libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +10   -8    libdiscover/backends/RpmOstreeBackend/RpmOstreeBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/00967dae94ace9b7d57ea6dc4ff2f689871d9d19