Refine presentation of "major upgrade available" message

- Put the distro name in the text so the button doesn't have to be so long
- For the PackageKit backend, change the button text to "Begin Upgrade…"
  So it's clear that this is just the first step and that further
  interactivity will be needed. For the RPM-OSTree backend, just tweak
  the existing wording to not be redundant.
- Give the button an appropriate icon
- Change the icon in the message banner itself to something more
  generic and appropriate (this is a generic update mechanism so it
  shouldn't be using an icon specific to RPM packages, since in
  principle this update notification could apply to an upgrade for
  any other kind of package too).
- While we're touching strings, give them some translation context

BUG: 476802
FIXED-IN: 6.0